src/z80asm/z80asm2/t/40-syntax/expected/lib_01.txt
% z88dk-z80asm -v -dump-after-parse t/40-syntax//input/lib_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/40-syntax/input/lib_01.asm...
t/40-syntax/input/lib_01.asm:1:4: error: Identifier expected
    lib
       ^
t/40-syntax/input/lib_01.asm:2:5: error: Identifier expected
    lib ,
        ^
t/40-syntax/input/lib_01.asm:4:8: error: Identifier expected
    lib a1,
           ^
Program: lib_01
    Modules:
        Module: lib_01 (current)
            Sections:
                Section:  (current)
    Statements:
        SymbolDeclareStmt
            Location: t/40-syntax/input/lib_01.asm:3:1
            Type: Extern
            Symbols:
                a1 at t/40-syntax/input/lib_01.asm:3:5
        SymbolDeclareStmt
            Location: t/40-syntax/input/lib_01.asm:5:1
            Type: Extern
            Symbols:
                a1 at t/40-syntax/input/lib_01.asm:5:5
                a2 at t/40-syntax/input/lib_01.asm:5:8
        SymbolDeclareStmt
            Location: t/40-syntax/input/lib_01.asm:6:1
            Type: Extern
            Symbols:
                a1 at t/40-syntax/input/lib_01.asm:6:5
                a2 at t/40-syntax/input/lib_01.asm:6:8
                a3 at t/40-syntax/input/lib_01.asm:6:11
